<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--android:showDividers="end"
            android:divider="@drawable/divider_drawable"-->

            <TextView
                android:id="@+id/new_crafting_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/new_crafting_name"></TextView>
            <EditText
                android:id="@+id/new_crafting_name_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autoText="false"
                android:clickable="false"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/new_crafting_kind"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/new_crafting_kind"/>
            <TextView
                android:id="@+id/new_crafting_kind_selected"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/new_crafting_litres"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/new_crafting_litre"></TextView>
            <EditText
                android:id="@+id/new_crafting_litres_selected"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/new_crafting_cereals"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/new_crafting_cereals"
                    android:layout_alignParentTop="true"
                    ></TextView>
                <ImageView
                    android:id="@+id/new_crafting_add_cereal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_black_18dp"
                    android:layout_toEndOf="@+id/new_crafting_cereals"/>

            </RelativeLayout>

            <ListView
                android:id="@+id/new_crafting_cereals_added_lv"
                android:layout_height="50dp"
                android:layout_width="match_parent"></ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider_drawable"
            android:showDividers="end">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/new_crafting_hops"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/new_crafting_hops"></TextView>
                <ImageView
                    android:id="@+id/new_crafting_add_hop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_black_18dp"
                    android:layout_toEndOf="@+id/new_crafting_hops"/>
            </RelativeLayout>
            <ListView
                android:id="@+id/new_crafting_hop_added_lv"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"></ListView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
